# Multi_robot_turtlebot

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo_multi_nav2_world.launch.py
models/turtlebot3_waffle/: model-1_4.sdf
scripts/: get_current_position.py  go2pose.py  run.py
